--- a/withtail/src/main/webapp/resources/css/style.css
+++ b/withtail/src/main/webapp/resources/css/style.css
@@ -9168,9 +9168,11 @@ h1, h2, h3, h4, h5,
 textarea.form-control {
   height: inherit !important; }
 
+/*
 .ftco-animate {
   opacity: 0;
   visibility: hidden; }
+  */
 
 .bg-primary {
   background: #82ae46 !important; }
