--- a/withtail/src/main/webapp/resources/css/style.css
+++ b/withtail/src/main/webapp/resources/css/style.css
@@ -8745,7 +8745,7 @@ h1, h2, h3, h4, h5,
       font-weight: 300;
       text-transform: uppercase;
       letter-spacing: 1px;
-      font-family: "Poppins", Arial, sans-serif; }
+    }
       .product .text h3 a {
         color: #000000; }
     .product .text p.price {
