--- a/withtail/src/main/webapp/resources/css/main2.css
+++ b/withtail/src/main/webapp/resources/css/main2.css
@@ -6,7 +6,7 @@ header {
 
 	width: 100%; height: 60px;
 
-	background: #eeeeee;
+	background: #f8f8f8;
 	box-shadow: rgba(0, 0, 0, 0.5) 0 -20px 20px 20px;
 }
 
@@ -108,18 +108,19 @@ body {
     color: #424951;
     padding-top: 0;
     padding-bottom: 5px;
-    margin: 0 0 25px 0;
-    border-bottom: 1px solid #ddd;
 }
 .body-title h2 {
-    font-size: 23px;
-    min-width: 300px;
+    font-size: 28px;
+    min-width: 100%;
     font-family:"Malgun Gothic", "맑은 고딕", NanumGothic, 나눔고딕, 돋움, sans-serif;
     font-weight: bold;
     margin: 0 0 -5px 0;
     padding-bottom: 5px;
     display: inline-block;
-    border-bottom: 3px solid #424951;
+    color: #555;
+    font-weight: bold;
+    margin-bottom: 1.5rem;
+    text-align: center;
 }
 
 .body-main {
