--- a/withtail/src/main/webapp/resources/css/menu2.css
+++ b/withtail/src/main/webapp/resources/css/menu2.css
@@ -32,7 +32,7 @@
   top: 50px;
   bottom: 0px;
   width: 200px;
-  background: #f6f6f6; }
+  background: #f8f8f8; }
 
 .vertical_nav__closed {
   left: -200px !important; }
@@ -124,7 +124,8 @@
   font-weight: 500; }
 
 .active_menu {
-  color: #050099;
+  color: #82ae46;
+  font-weight: bold;
   font-weight: 500; }
 
 .collapse_menu {
