--- a/withtail/src/main/webapp/resources/css/adminstyle.css
+++ b/withtail/src/main/webapp/resources/css/adminstyle.css
@@ -4,10 +4,14 @@
 *, *::after, *::before { box-sizing: border-box; }
 
 body {
-	font-family:"Malgun Gothic", "맑은 고딕", NanumGothic, 나눔고딕, 돋움, sans-serif;
-	font-size: 14px;
-	color: #222;
+    font-family: 'Pretendard-Regular';
+    background: #fff;
+    font-size: 15px;
+    line-height: 1.8;
+    font-weight: 400;
+    color: gray;
 }
+
 
 h1, h2, h3, h4, h5, h6 {
 	font-family: NanumGothic, 나눔고딕, "Malgun Gothic", "맑은 고딕", 돋움, sans-serif;
