--- a/withtail/src/main/webapp/resources/css/menu2.css
+++ b/withtail/src/main/webapp/resources/css/menu2.css
@@ -32,7 +32,8 @@
   top: 50px;
   bottom: 0px;
   width: 200px;
-  background: #f8f8f8; }
+  background: #f8f8f8; 
+  }
 
 .vertical_nav__closed {
   left: -200px !important; }
@@ -60,8 +61,8 @@
   position: absolute;
   top: 0;
   right: 15px;
-  height: 40px;
-  line-height: 40px;
+  height: 60px;
+  line-height: 60px;
   font-family: "FontAwesome";
   content: "\f0d7"; }
 
@@ -92,14 +93,14 @@
   display: block;
   float: left;
   width: 50px;
-  height: 40px;
-  line-height: 40px;
+  height: 60px;
+  line-height: 60px;
   font-size: 20px; }
 
 .menu--label {
   display: block;
-  height: 40px;
-  line-height: 40px; }
+  height: 60px;
+  line-height: 60px; }
 
 .sub_menu {
   display: none;
@@ -180,8 +181,8 @@
     bottom: 0px;
     display: block;
     width: 100%;
-    height: 40px;
-    line-height: 40px;
+    height: 55px;
+    line-height: 55px;
     padding: 0;
     border: 0;
     border-top: 1px solid #e6e6e6;
@@ -199,8 +200,8 @@
     display: block;
     float: left;
     width: 50px;
-    height: 40px;
-    line-height: 40px;
+    height: 55px;
+    line-height: 55px;
     font-size: 20px; }
 
   .collapse_menu .collapse_menu--icon:before {
